--- a/example/index.html
+++ b/example/index.html
@@ -8,5 +8,11 @@
 
     <div id="video-player"></div>
     <script src="../src/player.js"></script>
+    <script>
+        var myVideo = new Player({
+            videoId: '9FiNW55mPxw',
+        });
+        myVideo.init();
+    </script>
 </body>
 </html>
