Added autoPlay attribute and added it to the example and Readme.md

--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,8 @@
             videoId: '9FiNW55mPxw',
             playerId: 'my-video-player',
             playButton: '.play-video',
-            pauseButton: '.pause-video'
+            pauseButton: '.pause-video',
+            autoPlay: 1,
         });
         myVideo.init();
     </script>
