Added controls parameter and added it to example and readme.md

--- a/example/index.html
+++ b/example/index.html
@@ -18,6 +18,7 @@
             playButton: '.play-video',
             pauseButton: '.pause-video',
             autoPlay: 1,
+            controls: 0,
         });
         myVideo.init();
     </script>
