Added showInfo parameter and updated the readme and example

--- a/example/index.html
+++ b/example/index.html
@@ -19,6 +19,7 @@
             pauseButton: '.pause-video',
             autoPlay: 1,
             controls: 0,
+            showInfo: 0
         });
         myVideo.init();
     </script>
