--- a/example/index.html
+++ b/example/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Video plugin</title>
+  <meta charset="UTF-8">
+  <title>Video plugin</title>
 </head>
 <body>
 
-    <div id="my-video-player"></div>
-    <button class="play-video">Play me</button>
-    <button class="pause-video">Pause me</button>
+<!--     <div id="my-video-player"
+    data-video-id="lD7k6MRsTz8"
+    data-player-id="my-video-player"
+    data-width="800"
+    data-height="600"
+    data-play-button="true"
+    data-pause-button="true"></div>
+ -->
 
-    <script src="../src/player.js"></script>
-    <script>
-        var myVideo = new Player({
-            videoId: '9FiNW55mPxw',
-            playerId: 'my-video-player',
-            playButton: '.play-video',
-            pauseButton: '.pause-video',
-            autoPlay: 1,
-            controls: 0,
-            showInfo: 0
-        });
-        myVideo.init();
-    </script>
+  <script src="../src/player.js"></script>
+  <script>
+    var myVideo = new Player({
+      videoId: 'JXqTxFkZhao',
+      playerId: 'my-video-player',
+      playButton: 'play-video',
+      pauseButton: 'pause-video',
+      autoPlay: 0,
+      controls: 0,
+      showInfo: 0,
+      mute: 1
+    });
+    myVideo.init();
+  </script>
 </body>
 </html>
