--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,8 @@
       autoPlay: 0,
       controls: 0,
       showInfo: 0,
-      mute: 1
+      mute: 1,
+      wrap: 1
     });
     myVideo.init();
   </script>
