Cleaned up example pages

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -2,7 +2,7 @@
 <html lang: en>
 <head>
   <meta charset: UTF-8>
-  <title>Video plugin</title>
+  <title>Video plugin example</title>
   <link href="../style.css" rel="stylesheet">
 </head>
 <body>
@@ -25,7 +25,7 @@
       mute: 0
     });
   </script>
-  
+
   <pre>
     var myVideo = new Player({
       videoId: 'YrblkMd-KMs',
@@ -34,10 +34,10 @@
       controls: 0,
       relatedVideos: 0,
       showInfo: 0,
-      playButton: 'playVideo',
-      playButtonText: 'Play medfasdas',
-      pauseButton: 'pauseVideo',
-      pauseButtonText: 'Pause medsaas',
+      playButton: 'play-video',
+      playButtonText: 'Play me',
+      pauseButton: 'pause-video',
+      pauseButtonText: 'Pause me',
       mute: 0
     });
   </pre>
