--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -2,10 +2,12 @@
 <html lang: en>
 <head>
   <meta charset: UTF-8>
-  <title>Video plugin</title>
+  <title>Video plugin example</title>
   <link href="../style.css" rel="stylesheet">
 </head>
 <body>
+
+  <h1>Using the data attributes API</h1>
 
   <div class="custom-player"
        data-video-id="JXqTxFkZhao"
@@ -17,9 +19,9 @@
        data-related-videos="0"
        data-show-info="0"
        data-play-button="play-video"
-       data-play-button-text="Play me please"
+       data-play-button-text="Play"
        data-pause-button="pause-video"
-       data-pause-Button-text="Shut the..."
+       data-pause-Button-text="Pause"
        data-mute="1"
        data-loop="1"
   ></div>
@@ -35,11 +37,11 @@
        data-related-videos="0"
        data-show-info="0"
        data-play-button="play-video"
-       data-play-button-text="Play me please"
+       data-play-button-text="Play"
        data-pause-button="pause-video"
-       data-pause-Button-text="Shut the..."
+       data-pause-Button-text="Pause"
        data-mute="1"
-       data-loop="1"<span>></span>
+       data-loop="1"<span>></span><span><<span>/</span></span>div></span>
   </pre>
 </body>
 </html> 
