--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -4,12 +4,13 @@
   <meta charset: UTF-8>
   <title>Video plugin example</title>
   <link href="../style.css" rel="stylesheet">
+  <link href="../monokai-sublime.css" rel="stylesheet">
+  <script src="../../src/player.js"></script>
 </head>
 <body>
 
   <h1>Using the API</h1>
 
-  <script src="../../src/player.js"></script>
   <script>
     var myVideo = new Player({
       videoId: 'YrblkMd-KMs',
@@ -41,5 +42,7 @@
       mute: 0
     });
   </pre>
+  <script type="text/javascript" src="../highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html> 
