--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -4,6 +4,7 @@
   <meta charset: UTF-8>
   <title>Video plugin example</title>
   <link href="../style.css" rel="stylesheet">
+  <link href="../monokai-sublime.css" rel="stylesheet">
 </head>
 <body>
 
@@ -43,5 +44,8 @@
        data-mute="1"
        data-loop="1"<span>></span><span><<span>/</span></span>div></span>
   </pre>
+  <script type="text/javascript" src="../highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+
 </body>
 </html> 
