--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -9,39 +9,26 @@
 </head>
 <body>
 
-  <h1>Using the API</h1>
+  <div class="container">
 
-  <script>
-    var myVideo = new Player({
-      videoId: 'YrblkMd-KMs',
-      autoPlay: 0,
-      wrap: 1,
-      controls: 0,
-      relatedVideos: 0,
-      showInfo: 0,
-      playButton: 'play-video',
-      playButtonText: 'Play me',
-      pauseButton: 'pause-video',
-      pauseButtonText: 'Pause me',
-      mute: 0
-    });
-  </script>
+    <h1>Using the API</h1>
 
-  <pre>
-    var myVideo = new Player({
-      videoId: 'YrblkMd-KMs',
-      autoPlay: 0,
-      wrap: 1,
-      controls: 0,
-      relatedVideos: 0,
-      showInfo: 0,
-      playButton: 'play-video',
-      playButtonText: 'Play me',
-      pauseButton: 'pause-video',
-      pauseButtonText: 'Pause me',
-      mute: 0
-    });
-  </pre>
+    <script>
+      var myVideo = new Player({
+        videoId: 'YrblkMd-KMs'
+      });
+    </script>
+    <p>All you need is the ID of the video you want to display, and you're done.</p>
+    <pre>
+      <code class="javascript">
+        var myVideo = new Player({
+          videoId: 'YrblkMd-KMs'
+        });
+      </code>
+    </pre>
+
+  </div>
+
   <script type="text/javascript" src="../highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 </body>
