Refactored the array slice for data attributes

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -11,12 +11,23 @@
 
   <h1>Using the API</h1>
 
+  <div class="tester-div"></div>
+
   <script>
     var myVideo = new Player({
-      videoId: 'YrblkMd-KMs'
+      videoId: 'JXqTxFkZhao',
+      playBtn: 1,
+      pauseBtn: 1,
+      playBtnClass: 'lkdsnjlasndjas',
+      pauseBtnClass: 'adfasf'
     });
   </script>
-  
+
+  <div class="custom-player" data-video-id="Ykl2GOexoGU" data-play-btn="1" data-pause-btn="1" data-ytcontainer="ytthing" data-play-btn-class="play-button">
+    <div class="ytthing"></div>
+    <button class="play-button">Fuck yt</button>
+  </div>
+
   <p>All you need is the ID of the video you want to display, and you're done.</p>
 
   <pre>
@@ -29,5 +40,6 @@
 
   <script type="text/javascript" src="../highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
+
 </body>
 </html>
