Complete overhaul of how the element is created and placed on the page
Elements are created in memory and all relevant divs, classes, id’s etc
are created before placing on the page, then YtGenerate takes care of
injecting the videos and controls are added with click events

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -23,7 +23,7 @@
     });
   </script>
 
-  <div class="custom-player" data-video-id="Ykl2GOexoGU" data-play-btn="1" data-pause-btn="1" data-ytcontainer="ytthing" data-play-btn-class="play-button">
+  <div class="custom-player" data-video-id="Ykl2GOexoGU" data-play-btn="1" data-pause-btn="1" data-video-container="ytthing" data-play-btn-class="play-button">
     <div class="ytthing"></div>
     <button class="play-button">Fuck yt</button>
   </div>
