--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -39,7 +39,7 @@
   </pre>
 
   <script type="text/javascript" src="../highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script>if( window.console ) { hljs.initHighlightingOnLoad(); }</script>
 
 </body>
 </html>
