--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -23,7 +23,7 @@
 
   <script src="../../src/player.js"></script>
   <script type="text/javascript" src="../highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script>if( window.console ) { hljs.initHighlightingOnLoad(); }</script>
 
 </body>
 </html>
