Updated basic example to reflect new changes in player.js

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -15,25 +15,17 @@
 
   <script>
     var myVideo = new Player({
-      videoId: 'JXqTxFkZhao',
-      playBtn: 1,
-      pauseBtn: 1,
-      playBtnClass: 'lkdsnjlasndjas',
-      pauseBtnClass: 'adfasf'
+      videoId: 'JXqTxFkZhao'
     });
   </script>
 
-  <div class="custom-player" data-video-id="Ykl2GOexoGU" data-play-btn="1" data-pause-btn="1" data-video-container="ytthing" data-play-btn-class="play-button">
-    <div class="ytthing"></div>
-    <button class="play-button">Fuck yt</button>
-  </div>
-
-  <p>All you need is the ID of the video you want to display, and you're done.</p>
+  <p>All you need is the ID of the video you want to display and where you want to place it.</p>
 
   <pre>
     <code class="javascript">
       var myVideo = new Player({
-        videoId: 'YrblkMd-KMs'
+        videoId: 'YrblkMd-KMs',
+        placement: '.tester-div'
       });
     </code>
   </pre>
