Added placement param to example

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -15,7 +15,8 @@
 
   <script>
     var myVideo = new Player({
-      videoId: 'JXqTxFkZhao'
+      videoId: 'JXqTxFkZhao',
+      placement: '.tester-div'
     });
   </script>
 
