Added CSS to headers and added meta data for IE

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset: UTF-8>
   <title>Video plugin example</title>
-  <link href="../style.css" rel="stylesheet">
-  <link href="../monokai-sublime.css" rel="stylesheet">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <link href="../css/style.css" rel="stylesheet">
   <script src="../../src/player.js"></script>
 </head>
 <body style="max-width: 70%; margin: 0 auto; text-align: center;">
