--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset: UTF-8>
   <title>Video plugin example</title>
-  <link href="../style.css" rel="stylesheet">
-  <link href="../monokai-sublime.css" rel="stylesheet">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
 
