Changed page titles of examples

--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -2,8 +2,8 @@
 <html lang: en>
 <head>
   <meta charset: UTF-8>
-  <title>Video plugin example</title>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <title>Data attribute example</title>
   <link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
