--- a/example/event-listeners/index.html
+++ b/example/event-listeners/index.html
@@ -2,8 +2,8 @@
 <html lang: en>
 <head>
   <meta charset: UTF-8>
-  <title>Video plugin example</title>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <title>Event listeners example</title>
   <link href="../css/style.css" rel="stylesheet">
   <script src="../../src/player.js"></script>
 </head>
