Moved player.js to top of file and added body class to example

--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data attribute example</title>
   <link href="../css/style.css" rel="stylesheet">
+  <script src="../../src/player.js"></script>
 </head>
-<body>
+<body class="html-attr">
 
   <div class="container">
     <h1>Using the data attributes API</h1>
@@ -22,7 +23,6 @@
     </pre>
   </div>
 
-  <script src="../../src/player.js"></script>
   <script type="text/javascript" src="../highlight.pack.js"></script>
   <script>if( window.console ) { hljs.initHighlightingOnLoad(); }</script>
 
