--- a/example/event-listeners/index.html
+++ b/example/event-listeners/index.html
@@ -71,7 +71,7 @@
   </div>
 
   <script type="text/javascript" src="../highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script>if( window.console ) { hljs.initHighlightingOnLoad(); }</script>
 
 </body>
 </html>
