Added header and some header styles

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -10,6 +10,10 @@
 </head>
 <body class="api">
 
+  <header class="header">
+    <a href="/">Home</a>
+  </header>
+
   <div class="container">
     <h1>Using the API</h1>
 
