--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -10,6 +10,10 @@
 </head>
 <body class="html-attr">
 
+  <header class="header">
+    <a href="/">Home</a>
+  </header>
+
   <div class="container">
     <h1>Using the data attributes API</h1>
 
