--- a/example/event-listeners/index.html
+++ b/example/event-listeners/index.html
@@ -10,6 +10,10 @@
 </head>
 <body class="event-listener">
 
+  <header class="header">
+    <a href="/">Home</a>
+  </header>
+
   <div class="container">
     <h1>Custom Events with API</h1>
     
