--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <link href="/example/css/style.css" rel="stylesheet">
 </head>
 <body class="index">
-      
+
+  <header class="header">
+    <a href="/">Home</a>
+  </header>
+
   <div class="container">
     <h1 class="heading">YouTube Player examples</h1>
     <ul class="list horizontal-list">
