--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
   </header>
 
   <div class="container">
-    <h1 class="heading">YouTube Player examples</h1>
-    <ul class="list horizontal-list">
-      <li><a class="btn btn--nav-link" href="/example/api-example">API example</a></li>
-      <li><a class="btn btn--nav-link" href="/example/basic-example">HTML5 Data attributes example</a></li>
-      <li><a class="btn btn--nav-link" href="/example/event-listeners">Event listeners</a></li>
-    </ul>
+
+    <div class="section">
+      <h1 class="heading main-heading">YouTube Player examples</h1>
+      <ul class="list horizontal-list">
+        <li><a class="btn btn--nav-link" href="/example/api-example">API example</a></li>
+        <li><a class="btn btn--nav-link" href="/example/basic-example">HTML5 Data attributes example</a></li>
+        <li><a class="btn btn--nav-link" href="/example/event-listeners">Event listeners</a></li>
+      </ul>
+    </div>
   </div>
 
 </body>
