Changed example index's to look at dis folder instead of src

--- a/example/basic-example/index.html
+++ b/example/basic-example/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data attribute example</title>
   <link href="../css/style.css" rel="stylesheet">
-  <script src="../../src/player.js"></script>
+
+  <link href="../../dist/player.css" rel="stylesheet">
+  <script src="../../dist/player.min.js"></script>
 </head>
 <body class="html-attr">
 
