--- a/example/event-listeners/index.html
+++ b/example/event-listeners/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event listeners example</title>
   <link href="../css/style.css" rel="stylesheet">
-  <script src="../../src/player.js"></script>
+
+  <link href="../../dist/player.css" rel="stylesheet">
+  <script src="../../dist/player.min.js"></script>
 </head>
 <body class="event-listener">
 
