Changed div name to example div

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -19,12 +19,12 @@
   <div class="container">
     <h1>Using the API</h1>
 
-    <div class="tester-div"></div>
+    <div class="example-div"></div>
 
     <script>
       var myVideo = new Player({
         videoId: 'JXqTxFkZhao',
-        placement: '.tester-div'
+        placement: '.example-div'
       });
     </script>
 
@@ -34,7 +34,7 @@
       <code class="javascript">
         var myVideo = new Player({
           videoId: 'YrblkMd-KMs',
-          placement: '.tester-div'
+          placement: '.example-div'
         });
       </code>
     </pre>
