Removed class from a and added span to vertically align text and updated styles

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="section">
       <h1 class="heading main-heading">YouTube Player examples</h1>
       <ul class="list horizontal-list">
-        <li><a class="btn btn--nav-link" href="/example/api-example">API example</a></li>
-        <li><a class="btn btn--nav-link" href="/example/basic-example">HTML5 Data attributes example</a></li>
-        <li><a class="btn btn--nav-link" href="/example/event-listeners">Event listeners</a></li>
+        <li><a href="/example/api-example"><span>API example</span></a></li>
+        <li><a href="/example/basic-example"><span>HTML5 Data attributes example</span></a></li>
+        <li><a href="/example/event-listeners"><span>Event listeners</span></a></li>
       </ul>
     </div>
   </div>
