--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="section">
       <h1 class="heading main-heading">YouTube Player examples</h1>
       <ul class="list horizontal-list">
-        <li><a href="/example/api-example"><span>API example</span></a></li>
-        <li><a href="/example/basic-example"><span>HTML5 Data attributes example</span></a></li>
-        <li><a href="/example/event-listeners"><span>Event listeners</span></a></li>
+        <li><a href="/example/api-example"><span class="text">API example</span></a></li>
+        <li><a href="/example/basic-example"><span class="text">HTML5 Data attributes example</span></a></li>
+        <li><a href="/example/event-listeners"><span class="text">Event listeners</span></a></li>
       </ul>
     </div>
   </div>
