Amended asset URL's in examples

--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API example</title>
-  <link href="../css/style.css" rel="stylesheet">
+  <link href="/example/css/style.css" rel="stylesheet">
 
-  <link href="../../dist/player.css" rel="stylesheet">
-  <script src="../../dist/player.min.js"></script>
+  <link href="/dist/player.css" rel="stylesheet">
+  <script src="/dist/player.min.js"></script>
 </head>
 <body class="api">
 
@@ -41,7 +41,7 @@
 
   </div>
 
-  <script type="text/javascript" src="../highlight.pack.js"></script>
+  <script type="text/javascript" src="/example/highlight.pack.js"></script>
   <script>if( window.console ) { hljs.initHighlightingOnLoad(); }</script>
 
 </body>
