Added playlist example and added link to root

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="/example/api-example"><span class="text">API example</span></a></li>
         <li><a href="/example/basic-example"><span class="text">HTML5 Data attributes example</span></a></li>
         <li><a href="/example/event-listeners"><span class="text">Event listeners</span></a></li>
+        <li><a href="/example/playlists"><span class="text">Playlists</span></a></li>
       </ul>
     </div>
   </div>
