--- a/example/playlists/index.html
+++ b/example/playlists/index.html
@@ -23,7 +23,8 @@
 
     <script>
       var myVideo = new Player({
-        playlist: '1u-niluB8HI, cHHLHGNpCSA, 2-MBfn8XjIU, pB-5XG-DbAA, ktvTqknDobU',
+        videoId: 'cHHLHGNpCSA',
+        playlist: '2-MBfn8XjIU, pB-5XG-DbAA, ktvTqknDobU',
         placement: '.example-div',
         autoPlay: 1
       });
@@ -34,7 +35,7 @@
     <pre>
       <code class="javascript">
         var myVideo = new Player({
-          playlist: '1u-niluB8HI, cHHLHGNpCSA, 2-MBfn8XjIU, pB-5XG-DbAA, ktvTqknDobU',
+          playlist: 'cHHLHGNpCSA, 2-MBfn8XjIU, pB-5XG-DbAA, ktvTqknDobU',
           placement: '.example-div',
           autoPlay: 1
         });
