Added an example of controlling the playlist with external controls

--- a/example/playlists/index.html
+++ b/example/playlists/index.html
@@ -43,6 +43,7 @@
     </pre>
 
     <a href="event-listeners/" class="btn btn-standard">Playlists with event listeners</a>
+    <a href="custom-controls/" class="btn btn-standard">Playlists with custom controls</a>
 
   </div>
 
