Moved index file and change serve script

--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Youtube Player Plugin</title>
-  <link href="/example/css/style.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 </head>
 <body class="index">
 
@@ -18,10 +18,10 @@
     <div class="section">
       <h1 class="heading main-heading">YouTube Player examples</h1>
       <ul class="list horizontal-list">
-        <li><a href="/example/api-example"><span class="text">API example</span></a></li>
-        <li><a href="/example/basic-example"><span class="text">HTML5 Data attributes example</span></a></li>
-        <li><a href="/example/event-listeners"><span class="text">Event listeners</span></a></li>
-        <li><a href="/example/playlists"><span class="text">Playlists</span></a></li>
+        <li><a href="/api-example"><span class="text">API example</span></a></li>
+        <li><a href="/basic-example"><span class="text">HTML5 Data attributes example</span></a></li>
+        <li><a href="/event-listeners"><span class="text">Event listeners</span></a></li>
+        <li><a href="/playlists"><span class="text">Playlists</span></a></li>
       </ul>
     </div>
   </div>
