Updated paths for all example pages

--- a/example/playlists/event-listeners/index.html
+++ b/example/playlists/event-listeners/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API example</title>
-  <link href="/example/css/style.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 
-  <link href="/dist/player.css" rel="stylesheet">
-  <script src="/dist/player.min.js"></script>
+  <link href="https://cdn.rawgit.com/matt3188/video-player-plugin/gh-pages/dist/player.css" rel="stylesheet">
+  <script src="https://cdn.rawgit.com/matt3188/video-player-plugin/gh-pages/dist/player.min.js"></script>
 </head>
-<body class="api">
+<body class="event-listeners">
 
   <header class="header">
     <a href="/">Home</a>
@@ -53,11 +53,11 @@
       </code>
     </pre>
 
-    <a href="/example/playlists" class="btn btn-standard">Back to Playlists</a>
+    <a href="/playlists" class="btn btn-standard">Back to Playlists</a>
 
   </div>
 
-  <script type="text/javascript" src="/example/highlight.pack.js"></script>
+  <script type="text/javascript" src="/highlight.pack.js"></script>
   <script>if( window.console ) { hljs.initHighlightingOnLoad(); }</script>
 
 </body>
