--- a/example/api-example/index.html
+++ b/example/api-example/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API example</title>
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
 
-  <link href="https://cdn.rawgit.com/matt3188/video-player-plugin/gh-pages/dist/player.css" rel="stylesheet">
-  <script src="https://cdn.rawgit.com/matt3188/video-player-plugin/gh-pages/dist/player.min.js"></script>
+  <link href="https://cdn.rawgit.com/matt3188/video-player-plugin/master/dist/player.css" rel="stylesheet">
+  <script src="https://cdn.rawgit.com/matt3188/video-player-plugin/master/dist/player.min.js"></script>
 </head>
 <body class="api">
 
