--- a/example/index.html
+++ b/example/index.html
@@ -22,6 +22,7 @@
         <li><a href="basic-example"><span class="text">HTML5 Data attributes example</span></a></li>
         <li><a href="event-listeners"><span class="text">Event listeners</span></a></li>
         <li><a href="playlists"><span class="text">Playlists</span></a></li>
+        <li><a href="destroy-player"><span class="text">Destroy Player</span></a></li>
       </ul>
     </div>
   </div>
